--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,18 @@
     "name": "ivliev/imagefly",
     "description": "Imagefly for Laravel 5.x",
     "license": "MIT",
-    "version": "1.0.1",
     "authors": [
         {
             "name": "Andrej Ivliev"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.9",
         "intervention/image": "^2.3"
     },
     "autoload": {        
         "psr-0": {
-            "Ivliev\\Imagefly\\": "src/"
+            "Ivliev\\Imagefly\\": "src/Ivliev/Imagefly"
         }
     },
     "minimum-stability": "dev"
