--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "illuminate/support": "^5.0"
     },
     "autoload": {        
         "psr-4": {
