--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "ivliev/imagefly",
     "description": "Imagefly for Laravel 6.x and 7.x",
+    "version": "6.0.0",
     "license": "MIT",
     "authors": [
         {
